# peaking

./: .gitignore  README.md  mise.toml
daemon/: Cargo.toml  build.rs
daemon/src/: audio_capture.rs  capture.rs  config.rs  encoder.rs  event.rs  flush.rs  hotkey.rs  main.rs  paths.rs  pipeline.rs  process_monitor.rs  ring_buffer.rs  startup.rs  status.rs
docs/: config.example.toml  status.example.toml
gui/: electron.vite.config.ts  package-lock.json  package.json  tsconfig.node.json  tsconfig.web.json  vitest.config.ts
gui/src/main/: clips.ts  config.ts  daemon.ts  index.ts  status.ts
gui/src/preload/: index.ts
gui/src/renderer/: index.html
gui/src/renderer/src/: App.tsx
gui/src/renderer/src/__tests__/: App.test.tsx  ApplicationEntry.test.tsx  Clips.test.tsx  Settings.test.tsx  Sidebar.test.tsx  Status.test.tsx
gui/src/renderer/src/components/: ApplicationEntry.tsx  ClipCard.tsx  Sidebar.tsx
gui/src/renderer/src/pages/: Clips.tsx  Settings.tsx  Status.tsx
gui/src/renderer/src/types/: clips.ts  config.ts  electron.d.ts  status.ts
scripts/: Setup-DaemonBuild.ps1  Setup-Ffmpeg.ps1
